fix compilation errrors