@@ -1,7 +1,7 @@
 package org.upc.edu.Behaviours;
 import jade.core.AID;
 import jade.core.Agent;
-import jade.core.behaviours.OneShotBehaviour;
+import jade.core.behaviours.*;
 import jade.domain.DFService;
 import jade.domain.FIPAException;
 import jade.domain.FIPAAgentManagement.DFAgentDescription;
@@ -9,25 +9,28 @@ import jade.domain.FIPAAgentManagement.SearchConstraints;
 import jade.domain.FIPAAgentManagement.ServiceDescription;
 import jade.lang.acl.ACLMessage;
 import jade.lang.acl.MessageTemplate;
+import java.util.HashMap;
 
 
 /*
-FALTA: cyclic para ver si algun termometro envia un mensaje de que ha acabado
+FALTA: ver si algun termometro ha caido en cada iteracion
+FALTA: comparar con iteracion anterior valores
+FALTA: recibir respuesta de temperatura
 FALTA: implementar los puntos extra
 FALTA: implementar alarm management
  */
 
-public class SearchPingBehaviourAgent extends Agent
+public class Termostato extends Agent
 {
     float a, b;
     HashMap <AID, Float> prev_temp;
 
-    public class Termostato extends TickerBehaviour
+    public class RecibirTemperaturas extends TickerBehaviour
     {
         DFAgentDescription template;
         ServiceDescription templateSd;
         SearchConstraints sc;
-        public Temperatura(Agent a, long timeout)
+        public RecibirTemperaturas(Agent a, long timeout)
         {
             super(a,timeout);
             setAgent(a);
@@ -39,7 +42,7 @@ public class SearchPingBehaviourAgent extends Agent
             templateSd.setType("Termometro");
             template.addServices(templateSd);
             sc = new SearchConstraints();
-            sc.setMaxResults(new Long(10));
+            sc.setMaxResults(Long.valueOf(10));
         }
 
         public void onTick() {
@@ -53,8 +56,19 @@ public class SearchPingBehaviourAgent extends Agent
                     msg.addReceiver(provider);
                     msg.setContent("temperature");
                     send(msg);
-                    
-                    
+
+                    //recieve response from thermometer
+                    MessageTemplate tpl = MessageTemplate.MatchPerformative(ACLMessage.INFORM);
+                    msg = myAgent.receive(tpl);
+                    if (msg != null) {
+                        String content = msg.getContent();
+                        if (content != null) {
+                            System.out.println("RECIEVED TEMPERATURE: " + content);
+                        }
+                    }
+                    else {
+                        block();
+                    }
                 }
                 else {
                     System.out.println("No Agent Found");
@@ -69,9 +83,13 @@ public class SearchPingBehaviourAgent extends Agent
         Object[] args = getArguments();
         if (args.length != 2) {
             System.out.println("Wrong number of parameters for thermometer inicialization.");
-            exit();
+            System.exit(0);
         }
-        float a = args[0].floatValue();
-        float b = args[1].floatValue();
+        float a = Float.parseFloat(args[0].toString());
+        float b = Float.parseFloat(args[1].toString());
+
+        float ms = 1000;
+        RecibirTemperaturas rt = new RecibirTemperaturas(this, Math.round(ms));
+        this.addBehaviour(rt);
     }
 }
